fix horizontal overflow on body due to right animation

--- a/src/input.css
+++ b/src/input.css
@@ -10,6 +10,7 @@
     }
     
     body {
+        @apply max-w-full
         @apply font-lato;
         @apply bg-gradient-to-r from-teal-50 to-cyan-100;
     }
