--- a/src/output.css
+++ b/src/output.css
@@ -894,6 +894,10 @@ h1{
   overflow: hidden;
 }
 
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
 .rounded{
   border-radius: 0.25rem;
 }
